<resources>
    <string name="base_url">https://c723a00cfd15.ngrok.io/</string>

    <string name="app_name">올뺌쓰V0514</string>
    <string name="owl_honey_tip">올빼미 꿀팁</string>
    <string name="comm_honey_tip">꿀팁</string>
    <string name="comm_stocks_overseas">해외주식</string>
    <string name="comm_sports_overseas">해외스포츠</string>
    <string name="comm_food">야식</string>
    <string name="comm_study_hard">빡공</string>
    <string name="comm_latenight_food">야식</string>
    <string name="comm_games">게임</string>

    <string name="comm_write_article_title">글 작성 ㄱㄱ</string>
    <string name="action_back">뒤로가기</string>
    <string name="action_write">작성하기</string>
    <string name="bookmark_it">저장하기</string>
    <string name="delete_it">삭제하기</string>
    <string name="declare_it">신고하기</string>

    <string name="opacity_value_et">0.65</string>
    <string name="write_et_maxlines">5</string>
    <string name="test_bottom_nav_owl">올뺌</string>

    <string name="hungry_bingbong">배고픈 빙봉</string>
    <string name="cmt_uname">앉아있는 케이크</string>
    <string name="article_timestamp_tv_dummy">5분 전</string>
    <string name="article_content_tv">마구 근처에 늦게까지 영업하는 맛있는 떡볶이집 좀 알려주세요! 배고픔…</string>
    <string name="comment_section_hoonsoo_str">커뮤니티 가이드 준수를 통해 따듯한 올빼미 환경을 조성해주세요!</string>
    <string name="create_article_title_tv_str">글 작성하기</string>
    <string name="comment_sort_by_time_btn_text">등록순</string>
    <string name="comment_sort_by_popularity_btn_text">공감순</string>

    <string name="cmt_timepassed">3년 전</string>
    <string name="random_cmt">마구 근처에 늦게까지 영업하는 맛있는 떡볶이집 좀 알려주세요! 배고픔…</string>
    <string name="comment_fav_btn_text">공감하기</string>
    <string name="comment_reply_btn_text">답글쓰기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="float_submit">플로팅</string>

    <string name="tb_mpg_saved">저장한 글 보기</string>
    <string name="tb_mpg_mycontents">내가 쓴 글 보기</string>
    <string name="test_bottom_nav_alarm">알림</string>
    <string name="test_bottom_nav_notice">알림</string>
    <string name="test_bottom_nav_mypage">마이페이지</string>
    <string name="go_to_setting">설정</string>
    <string name="delete_account">탈퇴하기</string>
    <string name="notice_board">공지사항</string>

    <string name="setting_push_alarm">푸쉬 알림 설정</string>
    <string name="like_alarm">공감 알림</string>
    <string name="comment_alarm">댓글 알림</string>
    <string name="comment_comment_alarm">대댓글 알림</string>


    <!-- shared pref 관련 -->
    <string name="owl_shared_preferences_name">owltest</string>
    <string name="owl_shared_preferences_dummy_comm_posts">dummyPosts</string>

    <string name="comm_theme_not_found">응 없어~</string>
    <string name="dummy_post_id">post id</string>
    <string name="dummy_comments_key">dummyCommentsKey</string>
    <string name="dummy_post_body_notfound">글 id를 제대로 불러오지 못하여 아무것도 보여줄 게 없소!</string>
    <string name="article_content_for_dummy_post_id_retrive_error"><![CDATA[커뮤니티 -> 글 간에 id 값 전달하기 실패! 보여줄 본문이 없슈!]]></string>
    <string name="dummy_username_retrieve_error">콩순이</string>
    <string name="dummy_username_1">배고픈 빙봉</string>

    <!-- 신고 버튼 -->
    <string name="declaraion_msg">신고하시는 이유를 선택해주세요</string>
    <string name="reason_of_declaration1">부적절한 게시글</string>
    <string name="reason_of_declaration2">다른 올빼미를 비방하는 글이에요</string>
    <string name="reason_of_declaration3">신고 항목 개선 제안</string>

    <string name="hint_for_phone_number">핸드폰 번호</string>
    <string name="hint_for_auth_number">인증번호 입력</string>
    <string name="send_auth_number_btn">인증번호\n보내기</string>
    <string name="complete_auth_btn">인증하기</string>

    <string name="agree_all_policy">전체 동의 (필수)</string>
    <string name="agree_for_service">서비스 이용약관 동의</string>
    <string name="agree_for_gps_info">위치정보 활용 동의</string>
    <string name="agree_for_marketing">마케팅 정보 활용 동의(선택)</string>

    <string name="dialog_auth_msg">핸드폰 인증을 하시면\n주변 올빼미들과 소통할 수 있어요!</string>
    <string name="dialog_notice_msg">번호는 안전하게 보관되며 어디에도 공개되지 않아요</string>

    <string name="comm_post_date_created_tv_text">3분 전</string>
    <string name="reply_add_btn_text">입력</string>
    <string name="create_article_current_text_count_dummy_count">0</string>
    <string name="text_limit_indicator_dummy_text">/180</string>
    <string name="create_article_photo_upload_hint_text">이미지가 어떤 내용인지 설명해 주세요!</string>
    <string name="create_article_et_text_maxlength">180</string>
    <string name="comm_write_article_et_max_text_length">180</string>
    <string name="dummy_uid_1">1</string>
    <string name="dummy_uid_2">2</string>
    <string name="dummy_uid_3">3</string>
    <string name="dummy_uid_4">4</string>
    <string name="dummy_uid_5">5</string>
    <string name="dummy_likes_key">owl_dummy_like</string>
    <string name="dummy_bookmarks_key">owl_bookmarks_key</string>
    <string name="article_menu_report">신고하기</string>
    <string name="article_favorite_count_text">51</string>
    <string name="article_comment_count_text">121</string>
    <string name="title_activity_maps_main">Map</string>
    <string name="set_location_btn_tooltip_text">위치를 지정하여 글을 올려보세요!</string>
    <string name="u_have_to_login">회원가입/로그인 해야 볼 수 있어요!</string>


    <!--탈 퇴 -->
    <string name="do_you_want_quit_owl">올빼미 서비스를 탈퇴하시나요?</string>
    <string name="do_you_want_quit_owl_mention">계정을 삭제하면 작성한 글, 공감, 저장한 글 등 모든 활동 정보가 삭제됩니다. 계정 삭제 후 10일간 다시 가입할 수 없어요.</string>
    <string name="quest_quit_reason">탈퇴하려는 이유가 궁금해요.</string>
    <string name="delete_account_check_list1">너무 많이 이용해요</string>
    <string name="delete_account_check_list2">비매너 올빼미를 만났어요</string>
    <string name="delete_account_check_list3">원하는 정보가 없어요</string>
    <string name="delete_account_check_list4">새로운 올빼미 계정을 만들고 싶어요</string>
    <string name="really_delete">정말 탈퇴하시나요?</string>

    <string name="delete_cancel_btn">더 사용할래요</string>
    <string name="delete_sure_btn">네. 탈퇴할게요</string>

    <string name="someone_give_me_comment">누군가 댓글을 달았어요! 얼른 확인해보세요:)</string>
    <string name="someone_give_me_heart">누군가 공감을 했어요! 얼른 확인해보세요:)</string>
</resources>