<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comment_item_rl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/comments_rv_marginend"
    android:layout_marginEnd="@dimen/comments_rv_marginend"
    android:layout_marginTop="@dimen/comment_rv_margintop"
    android:layout_alignStart="@id/comment_sort_by_time_btn">
    <TextView
        android:id="@+id/comment_depth_dummy_tv"
        android:layout_width="@dimen/comment_item_depth_margin"
        android:layout_height="match_parent"
        android:visibility="gone"
        />
    <RelativeLayout
        android:layout_toEndOf="@id/comment_depth_dummy_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/comment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cmt_uname"
        android:textSize="@dimen/comment_username_size"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/comment_time_passed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_username"
        android:layout_marginTop="@dimen/comment_time_passed_margintop"
        android:text="@string/cmt_timepassed"
        android:textSize="@dimen/comment_time_passed_size"/>
    <TextView
        android:id="@+id/comment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_time_passed"
        android:layout_marginTop="@dimen/comment_content_margintop"
        android:text="@string/random_cmt"/>
    <TextView
        android:id="@+id/comment_fav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_content"
        android:layout_marginTop="@dimen/comment_fav_btn_margintop"
        android:text="@string/comment_fav_btn_text"
        android:textSize="@dimen/comment_fav_btn_text_size"
        android:textColor="@color/style1_8"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/comment_reply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_content"
        android:layout_toEndOf="@id/comment_fav_btn"
        android:layout_marginTop="@dimen/comment_fav_btn_margintop"
        android:layout_marginStart="@dimen/comment_reply_btn_marginstart"
        android:text="@string/comment_reply_btn_text"
        android:textSize="@dimen/comment_reply_btn_text_size"
        android:textColor="@color/style1_8"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/comment_marginbottom"/>
    </RelativeLayout>
</RelativeLayout>