<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="424dp"
    android:padding="16dp"
    android:background="@color/ui1">
    <TextView
        android:id="@+id/auth_cancel_btn"
        android:layout_width="@dimen/delete_x_size"
        android:layout_height="@dimen/delete_x_size"
        android:background="@drawable/ic_deletex"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/auth_message_tv"
        android:layout_below="@+id/login_dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:textSize="14sp"
        android:text="@string/dialog_auth_msg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/complete_auth_btn_layout"
        android:layout_below="@+id/auth_message_tv"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="#21ffffff"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_for_phone_number"
                android:textSize="12sp"
                android:paddingStart="12dp"
                android:maxLines="1"
                android:maxLength="11"
                />
            <Button
                android:clickable="false"
                android:id="@+id/send_auth_msg_btn"
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:textSize="10dp"
                android:text="@string/send_auth_number_btn"
                android:background="@color/brand2"></Button>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dialog_notice_msg"
            />
        <RelativeLayout
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/put_auth_number_layout">
            <EditText
                android:id="@+id/put_auth_number_et"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#21ffffff"
                android:layout_gravity="center"
                android:hint="@string/hint_for_auth_number"
                android:textSize="12sp"
                android:paddingStart="12dp"
                android:maxLines="1"
                android:maxLength="11"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3:00"
                android:textSize="12sp"
                android:layout_centerVertical="true"

                android:layout_margin="10dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/agree_all_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:text="@string/agree_all_policy"
                    android:layout_weight="1"></TextView>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/agree_all_policy_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="false"></androidx.appcompat.widget.AppCompatCheckBox>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/agree_for_service"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="@string/agree_for_service"
                    android:layout_weight="1"></TextView>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/agree_for_service_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/brand1"
                    android:checked="false"></androidx.appcompat.widget.AppCompatCheckBox>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/agree_for_gps_info"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="@string/agree_for_gps_info"
                    android:layout_weight="1"></TextView>
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/agree_for_gps_info_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"></androidx.appcompat.widget.AppCompatCheckBox>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/agree_for_marketing"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:text="@string/agree_for_marketing"
                    android:layout_weight="1"></TextView>
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/agree_for_marketing_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"></androidx.appcompat.widget.AppCompatCheckBox>
            </LinearLayout>




        </LinearLayout>




    </LinearLayout>
    <RelativeLayout
        android:id="@+id/complete_auth_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_corner_gray7">
        <Button
            android:clickable="false"
            android:id="@+id/complete_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/complete_auth_btn"

            android:background="@drawable/neon_btn_style"
            android:textColor="@color/brand1">

        </Button>
        <RelativeLayout
            android:id="@+id/complete_auth_btn_tint_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_gray7"
            android:backgroundTint="#33874FE1"></RelativeLayout>

    </RelativeLayout>



</RelativeLayout>